--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Csák Lajos: doboz</title>
-        <link rel="stylesheet" href="doboz_cskl.css">
+        <link rel="stylesheet" href="dobozok.css">
     </head>
     <body>
         <div class="container">Tartály<!--Tartály-->
