--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div class="container">Tartály<!--Tartály-->
-            <div class="header"><img src="alpok_panorama.png" width="80%">
+            <div class="header"><img src="alpok.png" width="80%">
 			<h1>A csodálatos Alpok</>
             </div>
             <div class="inner-container">Belső tartály
